--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+
+:root {
+  --step--4: clamp(0.72rem, 0.56rem + 0.83vw, 1.02rem);
+  --step--3: clamp(0.87rem, 0.64rem + 1.14vw, 1.28rem);
+  --step--2: clamp(1.04rem, 0.73rem + 1.54vw, 1.6rem);
+  --step--1: clamp(1.25rem, 0.84rem + 2.07vw, 2rem);
+  --step-0: clamp(1.5rem, 0.95rem + 2.76vw, 2.5rem);
+  --step-1: clamp(1.8rem, 1.07rem + 3.66vw, 3.13rem);
+  --step-2: clamp(2.16rem, 1.2rem + 4.82vw, 3.91rem);
+  --step-3: clamp(2.59rem, 1.33rem + 6.32vw, 4.88rem);
+  --step-4: clamp(3.11rem, 1.46rem + 8.26vw, 6.1rem);
+  --step-5: clamp(3.73rem, 1.58rem + 10.75vw, 7.63rem);
+  --blue: #58a6ff;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,8 +22,70 @@
 
 body {
   background-color: #111;
-  height: 100vh;
+  font-family: Helvetica, sans-serif;
+  font-size: var(--step-0);
+  min-height: 100vh;
+  color: #fffafa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: unset;
+}
+
+h1 {
+  font-size: var(--step-5);
+  font-weight: 700;
+  margin: 0 0 var(--step-0);
+}
+h2 {
+  font-size: var(--step-1);
+  margin: 0 0 var(--step-1);
+}
+h3 {
+  font-size: var(--step-3);
+}
+h4 {
+  font-size: var(--step-2);
+}
+h5 {
+  font-size: var(--step-1);
+}
+h6 {
+  font-size: var(--step-0);
+}
+
+p {
+  margin: 0 0 var(--step--2);
+}
+
+blockquote {
+  font-weight: 200;
+  font-size: var(--step--2);
+  margin: 0 0 var(--step-1);
+}
+
+.hello {
+  color: rgb(255, 177, 177);
+  transform-style: preserve-3d;
+  position: absolute;
+  top: 50%;
+  transform: translateZ(1px) rotateX(10deg);
+  font-size: 4rem;
+  left: 50%;
+  display: block;
 }
 
 #stars {
@@ -58,6 +136,71 @@ body {
 
 .blink {
   animation: blink 1000ms ease;
+}
+
+.content {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 600px) {
+  .content {
+    top: 30%;
+  }
+}
+
+.content span {
+  display: block;
+  line-height: 1.4;
+}
+
+.content span:nth-of-type(2) {
+  font-style: italic;
+  font-size: var(--step--3);
+}
+
+nav {
+  display: flex;
+  /* width: 420px; */
+  margin: 0 auto;
+  justify-content: space-around;
+  margin: 0 0 var(--step-2);
+}
+
+nav a {
+  display: block;
+  font-weight: bold;
+  transition: transform 250ms ease;
+}
+
+nav a:hover,
+nav a:focus,
+a:active {
+  transform: scale(1.1);
+}
+
+.github {
+  color: #58a6ff;
+}
+.codepen {
+  color: #ffdd41;
+}
+.linkedin {
+  color: #4c95de;
+}
+
+.npm {
+  background-image: linear-gradient(90deg, #fb8817, #ff4b01, #c12127, #e02aff);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: rgba(0, 0, 0, 0);
 }
 
 @keyframes blink {
